Replaced the "[group]" and "[user]" tags in permission editor with nice icons. They are still visible in the dropdown though (can we fix this?)
git-svn-id: https://ssl.supermind.nl/collab/svn/submin/submin/trunk@508 9dfea958-5e0b-0410-aa7e-b09452dc4efc

--- a/www/css/repository.css
+++ b/www/css/repository.css
@@ -84,3 +84,6 @@ div#permissions-editor img.adder {
 	margin-left: 0.2em;
 	cursor: pointer;
 }
+div#permissions-editor li span img {
+	margin-right: 0.25em;
+}
